<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.piyushpatel2005</groupId>
    <artifactId>scala-programming</artifactId>
    <version>1.0</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>7</source>
                    <target>7</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <sbt.project.name>examples</sbt.project.name>
        <scala.version>2.11.8</scala.version>
        <jdk.version>1.8</jdk.version>
        <cds.version>2.3.0.cloudera4</cds.version>
        <fox.alarming.version>2.5.4</fox.alarming.version>
        <lib.scope>provided</lib.scope>
    </properties>

    <!--<repositories>-->
    <!--<repository>-->
    <!--<id>cloudera</id>-->
    <!--<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>-->
    <!--</repository>-->
    <!--</repositories>-->

    <dependencies>
        <!--        <dependency>-->
        <!--            <groupId>org.scala-lang.modules</groupId>-->
        <!--            <artifactId>scala-async</artifactId>-->
        <!--            <version>0.9.2</version>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>org.scala-lang.modules</groupId>-->
        <!--            <artifactId>scala-parser-combinators</artifactId>-->
        <!--            <version>1.0.2</version>-->
        <!--        </dependency>-->

        <!--        <dependency>-->
        <!--            <groupId>org.scala-lang.modules</groupId>-->
        <!--            <artifactId>scala-xml</artifactId>-->
        <!--            <version>1.0.2</version>-->
        <!--        </dependency>-->

        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-actor_2.11</artifactId>
            <version>2.3.4</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.2</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.1.2</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.scalacheck/scalacheck -->
        <dependency>
            <groupId>org.scalacheck</groupId>
            <artifactId>scalacheck_2.11</artifactId>
            <version>1.13.5</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>1.6.2</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.1.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
            <scope>compile</scope>
        </dependency>


        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>3.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.9.0</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest -->
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_2.11</artifactId>
            <version>3.0.6</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.specs2/specs2 -->
        <dependency>
            <groupId>org.specs2</groupId>
            <artifactId>specs2_2.11</artifactId>
            <version>2.3.11</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/junit/junit-dep -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>


    </dependencies>

<!--    <build>-->
    <!--        <sourceDirectory>src/main/scala</sourceDirectory>-->
    <!--        <plugins>-->
    <!--            <plugin>-->
    <!--                <groupId>net.alchim31.maven</groupId>-->
    <!--                <artifactId>scala-maven-plugin</artifactId>-->
    <!--                <version>3.1.6</version>-->
    <!--                <executions>-->
    <!--                    <execution>-->
    <!--                        <phase>compile</phase>-->
    <!--                        <goals>-->
    <!--                            <goal>compile</goal>-->
    <!--                            <goal>testCompile</goal>-->
    <!--                        </goals>-->
    <!--                    </execution>-->
    <!--                </executions>-->
    <!--            </plugin>-->
            <!-- Run tests -->
            <!--            <plugin>-->
            <!--                <groupId>org.scalatest</groupId>-->
            <!--                <artifactId>scalatest-maven-plugin</artifactId>-->
            <!--                <version>2.0.0</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <goals>-->
            <!--                            <goal>test</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->

            <!--            &lt;!&ndash; Add test jar for distribution &ndash;&gt;-->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-jar-plugin</artifactId>-->
            <!--                <version>3.0.2</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <goals>-->
            <!--                            <goal>test-jar</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->


            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-shade-plugin</artifactId>-->
            <!--                <version>2.3</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>shade</goal>-->
            <!--                        </goals>-->
            <!--                        <configuration>-->
            <!--                            <shadedArtifactAttached>true</shadedArtifactAttached>-->
            <!--                            <filters>-->
            <!--                                <filter>-->
            <!--                                    <artifact>*:*</artifact>-->
            <!--                                    <excludes>-->
            <!--                                        <exclude>META-INF/*.SF</exclude>-->
            <!--                                        <exclude>META-INF/*.DSA</exclude>-->
            <!--                                        <exclude>META-INF/*.RSA</exclude>-->
            <!--                                    </excludes>-->
            <!--                                </filter>-->
            <!--                            </filters>-->
            <!--                            <artifactSet>-->
            <!--                                <includes>-->
            <!--                                    <include>*:*</include>-->
            <!--                                </includes>-->
            <!--                            </artifactSet>-->
            <!--                            <transformers>-->
            <!--                                <transformer-->
            <!--                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">-->
            <!--                                    <resource>reference.conf</resource>-->
            <!--                                </transformer>-->
            <!--                            </transformers>-->
            <!--                        </configuration>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-compiler-plugin</artifactId>-->
            <!--                <version>3.1</version>-->
            <!--                <configuration>-->
            <!--                    <source>${jdk.version}</source>-->
            <!--                    <target>${jdk.version}</target>-->
            <!--                </configuration>-->
            <!--            </plugin>-->


            <!--            &lt;!&ndash;<plugin>&ndash;&gt;-->
            <!--            &lt;!&ndash;<groupId>org.apache.maven.plugins</groupId>&ndash;&gt;-->
            <!--            &lt;!&ndash;<artifactId>maven-shade-plugin</artifactId>&ndash;&gt;-->
            <!--            &lt;!&ndash;<version>3.0.0</version>&ndash;&gt;-->
            <!--            &lt;!&ndash;<configuration>&ndash;&gt;-->
            <!--            &lt;!&ndash;<shadeTestJar>true</shadeTestJar>&ndash;&gt;-->
            <!--            &lt;!&ndash;</configuration>&ndash;&gt;-->
            <!--            &lt;!&ndash;</plugin>&ndash;&gt;-->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-assembly-plugin</artifactId>-->
            <!--                <version>2.5.4</version>-->
            <!--                <configuration>-->
            <!--                    <archive>-->
            <!--                        <manifest>-->
            <!--                            &lt;!&ndash;<mainClass>com.piyushpatel2005.LoadExpl</mainClass>&ndash;&gt;-->
            <!--                            <mainClass>com.piyushpatel2005.controlplane.StructuredStreamingMain</mainClass>-->
            <!--                        </manifest>-->
            <!--                    </archive>-->
            <!--                    <descriptorRefs>-->
            <!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
            <!--                    </descriptorRefs>-->
            <!--                </configuration>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>make-assembly</id>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>single</goal>-->
            <!--                        </goals>-->
            <!--                    </execution>-->
            <!--                </executions>-->

            <!--            </plugin>-->

<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-surefire-plugin</artifactId>-->
<!--                <version>2.21.0</version>-->
<!--                <configuration>-->
<!--                    <skipTests>false</skipTests>-->
<!--                    <argLine>-Xmx2048m -XX:MaxPermSize=2048m</argLine>-->
<!--                </configuration>-->
<!--            </plugin>-->


<!--        </plugins>-->
<!--    </build>-->

</project>